# event-tester

./: .gitignore  README.md  docker-compose.yaml  example.env  pyproject.toml
deployment/docker/: Dockerfile
src/: main.py
src/config/: settings.py
src/controllers/: api_router.py  event_controller.py
src/database/: connection.py
src/models/: event_model.py
src/schemas/: event_schema.py  user_story_schema.py
src/schemas/inputs/: even_input.py
src/schemas/outputs/: event_output.py  grouped_output.py  patterns_output.py  stories_output.py  test_output.py
src/services/: event_service.py  playwright_serivce.py  playwright_service.py  user_history_service.py
src/tests/: example.py  generated_tests.py
templates/: test_template.jinja2  test_templtate.jinja2
